--- a/footware.html
+++ b/footware.html
@@ -225,9 +225,9 @@
                 <ul class="footerMenuList">
                     <li class="footerListItem">Air Force</li>
                     <li class="footerListItem">Air Jordan</li>
-                    <li class="footerListItem">Blazer</li>
-                    <li class="footerListItem">Crater</li>
-                    <li class="footerListItem">Hippie</li>
+                    <li class="footerListItem">adidas</li>
+                    <li class="footerListItem">vans</li>
+                    <li class="footerListItem">converse</li>
                 </ul>
             </div>
         </div>
